fix(JobCard): company logo size overflow than the container

--- a/react/JobCard/JobCard.less
+++ b/react/JobCard/JobCard.less
@@ -116,6 +116,7 @@
   display: flex;
   align-items: center;
   align-self: flex-end;
+  overflow: hidden;
 }
 
 .companyLogo {
